--- a/apps/code-generator/src/components/canvas/component-canvas.css
+++ b/apps/code-generator/src/components/canvas/component-canvas.css
@@ -1,8 +1,11 @@
 .component-canvas {
+  max-height: 100%;
   min-height: 500px;
   background: #f5f5f5;
   padding: 20px;
   border: 2px dashed #ccc;
+  overflow: auto;
+  box-sizing: border-box;
 }
 
 .tree-node {
@@ -40,4 +43,9 @@
 .empty-canvas {
   width: 100%;
   height: 100%;
+}
+
+.canvas-inner {
+  transform-origin: top left;
+  will-change: transform;
 }
