--- a/apps/code-generator/src/components/canvas/component-canvas.css
+++ b/apps/code-generator/src/components/canvas/component-canvas.css
@@ -1,6 +1,5 @@
 .component-canvas {
-  max-height: 100%;
-  min-height: 500px;
+  height: 100%;
   background: #f5f5f5;
   padding: 20px;
   border: 2px dashed #ccc;
