feat(property editor): 속성 패널, 컴포넌트 카드 클릭 시 속성 수정 가능한 속성 모달 추가

--- a/apps/code-generator/src/components/canvas/canvas-view.css
+++ b/apps/code-generator/src/components/canvas/canvas-view.css
@@ -1,4 +1,11 @@
+.canvas-view {
+  display: flex;
+  position: relative;
+  height: 100vh;
+}
+
 .component-canvas {
+  flex: 1 1 70%;
   height: 100%;
   padding: 20px;
   border: 2px dashed var(--primary-light);
